--- a/src/MedClinic.Desktop/App.xaml
+++ b/src/MedClinic.Desktop/App.xaml
@@ -10,6 +10,7 @@
             <ResourceDictionary.MergedDictionaries>
 
                 <ResourceDictionary Source="/Styles/ButtonStyles.xaml"/>
+                <ResourceDictionary Source="/Styles/LabelStyles.xaml"/>
                 <ResourceDictionary Source="/Assets/Icons/Icons.xaml"/>
                 <ResourceDictionary Source="/Themes/MainTheme.xaml"/>
                 
