--- a/src/MedClinic.Desktop/Pages/Doctors/DoctorPage.xaml
+++ b/src/MedClinic.Desktop/Pages/Doctors/DoctorPage.xaml
@@ -5,10 +5,100 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:MedClinic.Desktop.Pages.Doctors"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="DoctorPage">
+      Title="DoctorPage"
+      Loaded="Page_Loaded">
 
-    <Grid>
+    <Grid
+        Margin="10">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid
+            HorizontalAlignment="Center"
+            Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="500"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Label
+                Grid.Column="0"
+                Content="Qidirish"
+                VerticalAlignment="Center"
+                Margin="10"
+                FontSize="18"
+                Style="{DynamicResource TitleLabel}"/>
+
+            <Border
+                Grid.Column="1"
+                Height="38"
+                Width="500"
+                CornerRadius="5"
+                BorderThickness="0.5"
+                BorderBrush="{DynamicResource BorderColor}"
+                Background="{DynamicResource FirstColor}">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="70"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBox
+                        x:Name="tbSearch"
+                        Margin="15 5 0 5"
+                        Background="Transparent"
+                        TextChanged="TextBox_TextChanged"
+                        PreviewKeyDown="TextBox_PreviewKeyDown"
+                        VerticalAlignment="Center"
+                        FontSize="15"
+                        BorderThickness="0"
+                        Foreground="{DynamicResource color}">
+                        </TextBox>
+                    <Path 
+                        x:Name="search" 
+                        Grid.Column="1"
+                        Data="{DynamicResource qidirish}"
+                        Fill="{DynamicResource color}"
+                        Height="20"
+                        Stretch="Uniform"/>
+                </Grid>
+            </Border>
+
+            <Button
+                x:Name="DoctorCreate_Button"
+                Click="DoctorCreate_Button_Click"
+                Height="35"
+                Width="150"
+                Margin="20 0 0 0"
+                Grid.Column="2"
+                Content="Qo'shish"
+                FontSize="18"
+                HorizontalAlignment="Center"
+                Foreground="{DynamicResource color}"
+                Style="{DynamicResource LoginButton}"/>
+
+        </Grid>
+        <ScrollViewer 
+            x:Name="scrolViver"
+            Visibility="Collapsed"
+            Grid.Row="1">
+            
+            <WrapPanel 
+                x:Name="wrpDoctors">
+            </WrapPanel>
+            
+        </ScrollViewer>
         
+        <Label 
+            x:Name="emptyData"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Visibility="Collapsed"
+            Content="Xozircha malumotlar yo'q"
+            FontSize="18">
+        </Label>
     </Grid>
 </Page>
