--- a/src/MedClinic.Desktop/Pages/Services/ServisePage.xaml
+++ b/src/MedClinic.Desktop/Pages/Services/ServisePage.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="MedClinic.Desktop.Pages.Rooms.RoomPage"
+﻿<Page x:Class="MedClinic.Desktop.Pages.Services.ServisePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MedClinic.Desktop.Pages.Rooms"
+      xmlns:local="clr-namespace:MedClinic.Desktop.Pages.Services"
       mc:Ignorable="d" 
-      Title="RoomPage"
+      Title="ServisePage"
       Loaded="Page_Loaded">
 
     <Grid
@@ -40,8 +40,8 @@
                 Grid.Column="1"/>
 
             <Button
-                x:Name="RoomCreate_Button"
-                Click="RoomCreate_Button_Click"
+                x:Name="ServiceCreate_Button"
+                Click="ServiceCreate_Button_Click"
                 Height="35"
                 Width="150"
                 Margin="20 0 0 0"
