--- a/src/MedClinic.Desktop/App.xaml
+++ b/src/MedClinic.Desktop/App.xaml
@@ -11,6 +11,7 @@
 
                 <ResourceDictionary Source="/Styles/ButtonStyles.xaml"/>
                 <ResourceDictionary Source="/Styles/LabelStyles.xaml"/>
+                <ResourceDictionary Source="/Styles/TextBoxStyles.xaml"/>
                 <ResourceDictionary Source="/Assets/Icons/Icons.xaml"/>
                 <ResourceDictionary Source="/Themes/MainTheme.xaml"/>
                 
