--- a/src/MedClinic.Desktop/Pages/Doctors/DoctorPage.xaml
+++ b/src/MedClinic.Desktop/Pages/Doctors/DoctorPage.xaml
@@ -32,40 +32,12 @@
                 FontSize="18"
                 Style="{DynamicResource TitleLabel}"/>
 
-            <Border
-                Grid.Column="1"
-                Height="38"
-                Width="500"
-                CornerRadius="5"
-                BorderThickness="0.5"
-                BorderBrush="{DynamicResource BorderColor}"
-                Background="{DynamicResource FirstColor}">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="70"/>
-                    </Grid.ColumnDefinitions>
-
-                    <TextBox
-                        x:Name="tbSearch"
-                        Margin="15 5 0 5"
-                        Background="Transparent"
-                        TextChanged="TextBox_TextChanged"
-                        PreviewKeyDown="TextBox_PreviewKeyDown"
-                        VerticalAlignment="Center"
-                        FontSize="15"
-                        BorderThickness="0"
-                        Foreground="{DynamicResource color}">
-                        </TextBox>
-                    <Path 
-                        x:Name="search" 
-                        Grid.Column="1"
-                        Data="{DynamicResource qidirish}"
-                        Fill="{DynamicResource color}"
-                        Height="20"
-                        Stretch="Uniform"/>
-                </Grid>
-            </Border>
+            <TextBox
+                Margin="0 0 0 0"
+                Name="searchTextBox"
+                Style="{DynamicResource search}"
+                KeyDown="SearchTextBox_KeyDown"
+                Grid.Column="1"/>
 
             <Button
                 x:Name="DoctorCreate_Button"
