--- a/src/MedClinic.Desktop/Pages/Patients/PatientPage.xaml
+++ b/src/MedClinic.Desktop/Pages/Patients/PatientPage.xaml
@@ -5,10 +5,71 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:MedClinic.Desktop.Pages.Patients"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
       Title="PatientPage">
 
-    <Grid>
+    <Grid
+        Margin="10">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <Grid
+            HorizontalAlignment="Center"
+            Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="500"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Label
+                Grid.Column="0"
+                Content="Qidirish"
+                VerticalAlignment="Center"
+                Margin="10"
+                FontSize="18"
+                Style="{DynamicResource TitleLabel}"/>
+
+            <TextBox
+                Margin="0 0 0 0"
+                Name="searchTextBox"
+                Style="{DynamicResource search}"
+                KeyDown="SearchTextBox_KeyDown"
+                Grid.Column="1"/>
+
+            <Button
+                x:Name="PatientCreate_Button"
+                Click="PatientCreate_Button_Click"
+                Height="35"
+                Width="150"
+                Margin="20 0 0 0"
+                Grid.Column="2"
+                Content="Qo'shish"
+                FontSize="18"
+                HorizontalAlignment="Center"
+                Foreground="{DynamicResource color}"
+                Style="{DynamicResource LoginButton}">
+            </Button>
+
+        </Grid>
         
+        <ScrollViewer 
+            x:Name="scrolViver"
+            Visibility="Collapsed"
+            Grid.Row="1">
+            <StackPanel 
+                x:Name="st_Patient">
+            </StackPanel>
+        </ScrollViewer>
+        
+        <Label 
+            x:Name="emptyData"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Visibility="Collapsed"
+            Content="Xozircha malumotlar yo'q"
+            FontSize="18">
+        </Label>
     </Grid>
 </Page>
