Add loader all pages

--- a/src/MedClinic.Desktop/Pages/Rooms/RoomPage.xaml
+++ b/src/MedClinic.Desktop/Pages/Rooms/RoomPage.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MedClinic.Desktop.Pages.Rooms"
+      xmlns:local="clr-namespace:MedClinic.Desktop.Components.Loader"
       mc:Ignorable="d" 
       Title="RoomPage"
       Loaded="Page_Loaded">
@@ -17,13 +17,15 @@
         </Grid.RowDefinitions>
 
         <Grid
-            HorizontalAlignment="Center"
-            Grid.Row="0">
+            Grid.Row="0"
+            HorizontalAlignment="Center">
+            
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="500"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
+            
             <Label
                 Grid.Column="0"
                 Content="Qidirish"
@@ -53,24 +55,32 @@
                 Style="{DynamicResource LoginButton}"/>
 
         </Grid>
-        <ScrollViewer 
-            x:Name="scrolViver"
-            Visibility="Collapsed"
+
+        <Grid
             Grid.Row="1">
 
-            <WrapPanel 
-                x:Name="wrpDoctors">
-            </WrapPanel>
+            <local:Loader
+                x:Name="Loader"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"/>
 
-        </ScrollViewer>
+            <ScrollViewer 
+                x:Name="scrolViver">
 
-        <Label 
-            x:Name="emptyData"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Visibility="Collapsed"
-            Content="Xozircha malumotlar yo'q"
-            FontSize="18">
-        </Label>
+                <WrapPanel 
+                    x:Name="wrpDoctors">
+                </WrapPanel>
+
+            </ScrollViewer>
+
+            <Label 
+                x:Name="emptyData"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Visibility="Collapsed"
+                Content="Xozircha malumotlar yo'q"
+                FontSize="18">
+            </Label>
+        </Grid>
     </Grid>
 </Page>
