--- a/src/MedClinic.Desktop/Pages/Patients/PatientPage.xaml
+++ b/src/MedClinic.Desktop/Pages/Patients/PatientPage.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:MedClinic.Desktop.Pages.Patients"
+      xmlns:local="clr-namespace:MedClinic.Desktop.Components.Loader"
       mc:Ignorable="d" 
       Title="PatientPage">
 
@@ -53,23 +53,31 @@
             </Button>
 
         </Grid>
-        
-        <ScrollViewer 
-            x:Name="scrolViver"
-            Visibility="Collapsed"
+
+        <Grid
             Grid.Row="1">
-            <StackPanel 
-                x:Name="st_Patient">
-            </StackPanel>
-        </ScrollViewer>
-        
-        <Label 
-            x:Name="emptyData"
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Visibility="Collapsed"
-            Content="Xozircha malumotlar yo'q"
-            FontSize="18">
-        </Label>
+
+            <local:Loader
+                x:Name="Loader"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"/>
+
+            <ScrollViewer 
+                x:Name="scrolViver">
+                <StackPanel 
+                    x:Name="st_Patient">
+                </StackPanel>
+            </ScrollViewer>
+            
+            <Label 
+                x:Name="emptyData"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Visibility="Collapsed"
+                Content="Xozircha malumotlar yo'q"
+                FontSize="18">
+            </Label>
+        </Grid>
+
     </Grid>
 </Page>
