--- a/src/MedClinic.Desktop/Styles/LabelStyles.xaml
+++ b/src/MedClinic.Desktop/Styles/LabelStyles.xaml
@@ -15,4 +15,13 @@
         <Setter Property="FontWeight" Value="SemiBold"/>
     </Style>
 
+    <Style x:Key="TextBlockStyle"  TargetType="{x:Type TextBlock}">
+        <Setter Property="Foreground" Value="{DynamicResource color}"/>
+        <Setter Property="FontFamily" Value="Jetbrain Mono"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
+    </Style>
+
 </ResourceDictionary>
