--- a/src/MedClinic.Desktop/Components/Doctors/DoctorComponent.xaml
+++ b/src/MedClinic.Desktop/Components/Doctors/DoctorComponent.xaml
@@ -5,8 +5,67 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MedClinic.Desktop.Components.Doctors"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+             Height="350" 
+             Width="280">
+    <Grid
+        Margin="10">
+        <Border
+            x:Name="DoctorImage"
+            Cursor="Hand"
+            MouseDown="DoctorImage_MouseDown"
+            MouseEnter="DoctorImage_MouseEnter"
+            MouseLeave="DoctorImage_MouseLeave"
+            BorderBrush="Transparent"
+            BorderThickness="1"
+            CornerRadius="10"
+            Background="{DynamicResource FirstColor}">
+            <StackPanel
+                Margin="5 0 5 5"
+                Orientation="Vertical">
+                
+                <Border
+                    Margin="0 10"
+                    Height="180"
+                    Width="230"
+                    CornerRadius="10">
+                    <Border.Background>
+                        <ImageBrush 
+                            x:Name="DoctorsImage"
+                            Stretch="UniformToFill"/>
+                    </Border.Background>
+
+                    <Button
+                        x:Name="deletebtn"
+                        Background="White"
+                        Margin="190 10 10 140"
+                        Height="30"
+                        Width="30"
+                        Click="deletebtn_Click"
+                        Style="{DynamicResource DeleteButton}"/>
+
+                </Border>
+                
+                <Label
+                    x:Name="DoctorName"
+                    Margin="10 0 10 0"
+                    Content=""
+                    Style="{DynamicResource NameLabel}"/>
+                
+                <Label
+                    x:Name="DoctorPersonality"
+                    Margin="10 0 0 0"
+                    Style="{DynamicResource TitleLabel}"/>
+                
+                <Button
+                    x:Name="btnManege"
+                    Click="btnManege_Click"
+                    Content="Boshqarish"
+                    FontSize="14"
+                    Margin="0 15 0 0"
+                    Width="150"
+                    Height="25"
+                    Style="{DynamicResource LoginButton}"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </UserControl>
