--- a/src/MedClinic.Desktop/Components/Doctors/DoctorComponent.xaml
+++ b/src/MedClinic.Desktop/Components/Doctors/DoctorComponent.xaml
@@ -27,44 +27,51 @@
                     Margin="0 10"
                     Height="180"
                     Width="230"
-                    CornerRadius="10">
-                    <Border.Background>
-                        <ImageBrush 
+                    CornerRadius="10"
+                    Background="#E8E8E8">
+                    
+                        <Image
+                            Source="/Assets/Images/login.png" 
                             x:Name="DoctorsImage"
                             Stretch="UniformToFill"/>
-                    </Border.Background>
-
-                    <Button
-                        x:Name="deletebtn"
-                        Background="White"
-                        Margin="190 10 10 140"
-                        Height="30"
-                        Width="30"
-                        Click="deletebtn_Click"
-                        Style="{DynamicResource DeleteButton}"/>
 
                 </Border>
                 
                 <Label
                     x:Name="DoctorName"
                     Margin="10 0 10 0"
-                    Content=""
+                    Content="Shodiyor Erqo'ziyev"
                     Style="{DynamicResource NameLabel}"/>
                 
                 <Label
                     x:Name="DoctorPersonality"
                     Margin="10 0 0 0"
+                    Content="Stamatolog"
                     Style="{DynamicResource TitleLabel}"/>
+
+                <Grid
+                    Margin="0 15 0 0">
+
+                    <Button
+                        x:Name="updatebtn"
+                        Background="White"
+                        Height="30"
+                        Width="30"
+                        Click="updatebtn_Click"
+                        HorizontalAlignment="Left"
+                        Style="{DynamicResource EditeButton}"/>
+                    
+                    <Button
+                        x:Name="deletebtn"
+                        Background="White"
+                        Height="30"
+                        Width="30"
+                        Click="deletebtn_Click"
+                        HorizontalAlignment="Right"
+                        Style="{DynamicResource DeleteButton}"/>
+
+                </Grid>
                 
-                <Button
-                    x:Name="btnManege"
-                    Click="btnManege_Click"
-                    Content="Boshqarish"
-                    FontSize="14"
-                    Margin="0 15 0 0"
-                    Width="150"
-                    Height="25"
-                    Style="{DynamicResource LoginButton}"/>
             </StackPanel>
         </Border>
     </Grid>
