--- a/src/MedClinic.Desktop/Styles/ButtonStyles.xaml
+++ b/src/MedClinic.Desktop/Styles/ButtonStyles.xaml
@@ -424,17 +424,60 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border 
-                    x:Name="B"
-                    Background="White"
-                    BorderBrush="Gray"
-                    BorderThickness="0.5"
-                    CornerRadius="25"
+                        x:Name="B"
+                        Background="White"
+                        BorderBrush="Gray"
+                        BorderThickness="0.5"
+                        CornerRadius="25"
+                        >
+                        <Path 
+                            Fill="#CE0000" 
+                            Data="{DynamicResource delete}"
+                            Height="15"
+                            Width="15"
+                            Stretch="Uniform"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="B" Property="Background" Value="#E5E5E5"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="False">
+                            <Setter TargetName="B" Property="Background" Value="white"/>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="B" Property="Background" Value="#CCCCCC"/>
+                        </Trigger>
+
+
+                    </ControlTemplate.Triggers>
+
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="EditeButton" TargetType="{x:Type Button}">
+        <Setter Property="Height" Value="24"/>
+        <Setter Property="Width" Value="24"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="10"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border 
+                        x:Name="B"
+                        Background="White"
+                        BorderBrush="Gray"
+                        BorderThickness="0.5"
+                        CornerRadius="25"
                     >
-                        <Path Fill="#215F9D" 
-                          Data="{DynamicResource delete}"
-                          Height="20"
-                          Width="20"
-                          Stretch="Uniform"/>
+                        <Path 
+                            Fill="Blue" 
+                            Data="{DynamicResource pencil}"
+                            Height="15"
+                            Width="15"
+                            Stretch="Uniform"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
@@ -488,13 +531,15 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border 
-                x:Name="B"
-                Background="#F2F2F2"
-                >
-                        <Path Fill="Black" Data="{DynamicResource showPasswordCros}"
-                      Height="17"
-                      Width="17"
-                      Stretch="Uniform"/>
+                        x:Name="B"
+                        Background="#F2F2F2"
+                        >
+                        <Path 
+                            Fill="Black" 
+                            Data="{DynamicResource showPasswordCros}"
+                            Height="17"
+                            Width="17"
+                            Stretch="Uniform"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
