--- a/src/MedClinic.Desktop/Windows/Doctors/DoctorCreateWindow.xaml
+++ b/src/MedClinic.Desktop/Windows/Doctors/DoctorCreateWindow.xaml
@@ -138,12 +138,14 @@
                             IsReadOnly="True"
                             Margin="5 5 5 10"
                             Width="200"
+                            MaxDropDownHeight="100"
                             HorizontalAlignment="Left">
 
-                            <ComboBoxItem
-                                Content="Shifokor"/>
-                            <ComboBoxItem
-                                Content="Hamshira"/>
+                            <ComboBox.ItemContainerStyle>
+                                <Style TargetType="ComboBoxItem">
+                                    <Setter Property="Margin" Value="0 0 15 0"/>
+                                </Style>
+                            </ComboBox.ItemContainerStyle>
 
                         </ComboBox>
 
@@ -157,12 +159,14 @@
                             Name="doctor_Service"
                             Margin="5 5 5 10"
                             Width="200"
+                            MaxDropDownHeight="100"
                             HorizontalAlignment="Left">
 
-                            <ComboBoxItem
-                                Content="Shifokor"/>
-                            <ComboBoxItem
-                                Content="Hamshira"/>
+                            <ComboBox.ItemContainerStyle>
+                                <Style TargetType="ComboBoxItem">
+                                    <Setter Property="Margin" Value="0,0,15,0"/>
+                                </Style>
+                            </ComboBox.ItemContainerStyle>
 
                         </ComboBox>
 
@@ -180,6 +184,7 @@
                         
                         <TextBox
                             x:Name="txt_Persentage"
+                            MaxLength="3"
                             PreviewTextInput="txt_PhoneNuber_PreviewTextInput"
                             Style="{DynamicResource Update_TextBox_Style}"/>
 
@@ -205,18 +210,21 @@
                         <Label
                             Content="Pozitsiyasi :"
                             FontSize="15"
+                            Margin="0 5 0 0"
                             Style="{DynamicResource TitleLabel}"/>
                         <ComboBox
                             IsReadOnly="True"
                             Name="doctor_Position"
                             Margin="5 5 5 10"
                             Width="200"
+                            MaxDropDownHeight="100"
                             HorizontalAlignment="Left">
 
-                            <ComboBoxItem
-                                Content="Shifokor"/>
-                            <ComboBoxItem
-                                Content="Hamshira"/>
+                            <ComboBox.ItemContainerStyle>
+                                <Style TargetType="ComboBoxItem">
+                                    <Setter Property="Margin" Value="0,0,15,0"/>
+                                </Style>
+                            </ComboBox.ItemContainerStyle>
 
                         </ComboBox>
 
